--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -26,6 +26,7 @@
         <div class="menuInner">
             <a href="#/forwardingNote" style="border-right:1px solid #ccc; margin-right:5px; padding-right:12px;">Forwarding Note</a>
             <a href="#/dispatch">Dispatch</a>
+            <a href="#/dispatches">Dispatches</a>
             <div class="clrBt"></div>
         </div>
     </div>
