--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
   <script src="services.js"></script>
   <script src="forwardingNote/forwardingNote.js"></script>
   <script src="dispatch/dispatch.js"></script>
+  <script src="dispatches/dispaches.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
