--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,14 @@
   <script src="/com/js/utils.js"></script>
   <script src="/com/js/config.js"></script>
   <script src="/com/js/allScript.js"></script>
+<!--	<script type="text/javascript">
+		$(document).ready(function() {
+			$('.menuInner a').click(function(){
+				 $('.selectedMenu').removeClass('selectedMenu')
+				 $(this).addClass("selectedMenu");
+			});
+		});
+    </script>-->
 </head>
 <body>
   <!--<ul class="menu">-->
