--- a/app/dispatches/dispatches.html
+++ b/app/dispatches/dispatches.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8">
   <title>Dispatches</title>
   <script src="/com/js/html2canvas.js" type="text/javascript"></script>
-
 </head>
 
 <body>
@@ -28,7 +27,7 @@
     <div class="menuInner">
       <a href="#/forwardingNote" style="border-right:1px solid #ccc; margin-right:5px; padding-right:12px;">Forwarding Note</a>
       <a href="#/dispatch" style="border-right:1px solid #ccc; margin-right:5px; padding-right:12px;">Dispatch</a>
-      <a href="#/dispatches">Dispatches</a>
+      <a href="#/dispatches" class="selectedMenu">Dispatches</a>
       <div class="clrBt"></div>
     </div>
   </div>
