--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,8 @@
   <script src="/com/js/utils.js"></script>
   <script src="/com/js/config.js"></script>
   <script src="/com/js/allScript.js"></script>
+  <script src="/com/js/sorting.js" type="text/javascript"></script>
+  <script src="/com/js/html2canvas.js" type="text/javascript"></script>
 <!--	<script type="text/javascript">
 		$(document).ready(function() {
 			$('.menuInner a').click(function(){
