--- a/app/dispatch/dispatch.html
+++ b/app/dispatch/dispatch.html
@@ -38,9 +38,12 @@
 
       <div class="contLeftRightMain">
         <div class="clrBt"></div>
-        <!--<div style="margin:0 0 10px 0;" class="buttonMain flt_L">-->
-          <!--<button type="button" class="flt_L" style="margin-right:10px;">Open</button>-->
-        <!--</div>-->
+        <div style="margin:0 0 10px 0;" class="buttonMain flt_L">
+          <label>Forwarding Number Id</label>
+          <input ng-model="fnId" type="number" style="width:125px;" />
+          <button type="button" class="flt_L" ng-click="getForwardingNote()" style="margin-right:10px;">Apply</button>
+          <button type="button" class="flt_L" ng-click="reset()" style="margin-right:10px;">Reset</button>
+        </div>
         <div style="margin:0 0 10px 0;" class="buttonMain flt_R">
           <button type="button" ng-click="showVanDataPopUp()" class="flt_L" style="margin-right:10px;">Add Van Details</button>
         </div>
