--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
   <script src="/com/js/config.js"></script>
   <script src="/com/js/allScript.js"></script>
   <script src="/com/js/sorting.js" type="text/javascript"></script>
-  <script src="/com/js/html2canvas.js" type="text/javascript"></script>
+  <script src="/com/js/htm2Canvas.min.js" type="text/javascript"></script>
 <!--	<script type="text/javascript">
 		$(document).ready(function() {
 			$('.menuInner a').click(function(){
