--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -221,12 +221,11 @@
   </div>
 </div> <!-- Forwarding Note Popup Box Style End -->
 
-
 </div> <!-- Page Main Section End -->
 
-<div ng-if="afterSaveMessage">
-    <div>
-        <span>{{afterSaveMessage}}</span>
+<div ng-if="afterSaveMessage" class="afterSaveMessageMain">
+	<div class="afterSaveMessageInr">
+		<span>{{afterSaveMessage}}</span>
     </div>
 </div>
 
