--- a/app/forwardingNote/forwardigNote.html
+++ b/app/forwardingNote/forwardigNote.html
@@ -31,18 +31,18 @@
         </div>
     </div>
 
-    <div class="contentAreaMain"> <!-- Content Area Main Start -->
+    <div class="contentAreaMain" ng-init="initData()"> <!-- Content Area Main Start -->
         <div class="contentAreaInner">
             <h2 class="pageTitle">Forwarding Note</h2>
             <form class="formStyleMain formLRMain">
                 <div class="textBox">
                     <label>Forwarding Date<span style="color:red;">*</span></label>
-                    <input type="date" ng-class="{'redBorder':isNotFnDate}" format="YYYY-MM-DD" ng-model="currentFn.fnDate" />
+                    <input tabindex="1" type="date" ng-class="{'redBorder':isNotFnDate}" format="YYYY-MM-DD" ng-model="currentFn.fnDate" />
                     <div class="clrBt"></div>
                 </div>
                 <div class="textBox">
                     <label>Transport Name<span style="color:red;">*</span></label>
-                    <input style="text-transform: uppercase" id="transporter_name_id" ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.name" type="text" />
+                    <input tabindex="2" style="text-transform: uppercase" id="transporter_name_id" ng-class="{'redBorder':isNotTransporter}" ng-disabled="isTransporterDisabled" ng-model="currentFn.transporter.name" type="text" />
                   <div style="margin-top:4px;" class="buttonMain flt_R">
                     <button ng-click="clearTransporter()">Clear</button>
                   </div>
@@ -50,13 +50,13 @@
                 </div>
                 <div class="textBox">
                     <label>Station/Place<span style="color:red;">*</span></label>
-                    <input style="text-transform: uppercase"  id="t_station_id" ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" type="text" />
+                    <input tabindex="3" style="text-transform: uppercase"  id="t_station_id" ng-class="{'redBorder':isNotTransporter}" ng-model="currentFn.transporterStation" type="text" />
                     <div class="clrBt"></div>
 
                 </div>
                 <div class="textBox">
                     <label>Customer Name<span style="color:red;">*</span></label>
-                    <input style="text-transform: uppercase" id="customer_name_id" ng-class="{'redBorder':isNotCustomer}" ng-disabled="isCustomerDisabled" ng-model="currentFn.customer.name" type="text" />
+                    <input tabindex="4" style="text-transform: uppercase" id="customer_name_id" ng-class="{'redBorder':isNotCustomer}" ng-disabled="isCustomerDisabled" ng-model="currentFn.customer.name" type="text" />
                   <div style="margin-top:4px;" class="buttonMain flt_R">
                     <button ng-click="clearCustomer()">Clear</button>
                   </div>
@@ -64,18 +64,18 @@
                 </div>
                 <div class="textBox">
                     <label>Station/Place<span style="color:red;">*</span></label>
-                    <input style="text-transform: uppercase" ng-disabled="isCustomerDisabled" ng-class="{'redBorder':isNotCustomer}" ng-model="currentFn.customer.city" type="text" />
+                    <input tabindex="5" style="text-transform: uppercase" ng-disabled="isCustomerDisabled" ng-class="{'redBorder':isNotCustomer}" ng-model="currentFn.customer.city" type="text" />
                     <div class="clrBt"></div>
                 </div>
                 <div class="textBox">
                     <label>Bill No</label>
-                    <input type="text" ng-model="currentFn.billNumber" />
+                    <input tabindex="6" type="text" ng-model="currentFn.billNumber" />
                     <div class="clrBt"></div>
                 </div>
 
                 <div class="textBox">
                     <label>Bill Date</label>
-                    <input type="date" ng-model="currentFn.billDate" />
+                    <input tabindex="7" type="date" ng-model="currentFn.billDate" />
                     <div style="margin-top:4px; margin-right:6px;" class="buttonMain flt_R"><button ng-click="addBillDate()">Add</button></div>
                     <div class="clrBt"></div>
                     <div class="billDatesBox">
@@ -87,35 +87,36 @@
 
                 <div class="textBox">
                     <label>Bill Value<span style="color:red;">*</span></label>
-                    <input ng-change="calculateBillValue()" ng-class="{'redBorder':isNotBillValue}" ng-model="currentFn.billValues" type="text" />
+                    <input tabindex="8" ng-change="calculateBillValue()" ng-class="{'redBorder':isNotBillValue}" ng-model="currentFn.billValues" type="text" />
                     <label style="margin:0; text-align:center; width:67px; color:#3588ae;"><span style="display:block; color:#3588ae;">Total</span> <span style="display:block; color:#3588ae;">{{totalBillValue}}</span></label>
                     <div class="clrBt"></div>
                 </div>
                 <div class="textBox">
                     <label>Cases<span style="color:red;">*</span></label>
-                    <input type="text" ng-class="{'redBorder':isNotCases}" ng-model="currentFn.cases" />
+                    <input tabindex="9" type="text" ng-class="{'redBorder':isNotCases}" ng-model="currentFn.cases" />
                     <div class="clrBt"></div>
                 </div>
                 <div class="textBox">
                     <label>Pvt. Marka<span style="color:red;">*</span></label>
-                    <input style="text-transform: uppercase" type="text"  ng-class="{'redBorder':isNotMarka}" ng-model="currentFn.marka" />
+                    <input tabindex="10" style="text-transform: uppercase" type="text"  ng-class="{'redBorder':isNotMarka}" ng-model="currentFn.marka" />
                     <div class="clrBt"></div>
                 </div>
                 <div class="textBox">
                     <label>Permit No</label>
-                    <input type="text" ng-model="currentFn.permitNo" />
+                    <input tabindex="11" type="text" ng-model="currentFn.permitNo" />
                     <div class="clrBt"></div>
                 </div>
 
                 <div class="textBox">
                     <label>Comments</label>
-                    <input type="text" ng-model="currentFn.comments" />
+                    <input tabindex="12" type="text" ng-model="currentFn.comments" />
                     <div class="clrBt"></div>
                 </div>
 
                 <div class="textBox">
                     <label>Company/Division</label>
-                    <input style="text-transform:uppercase;" type="text" ng-model="currentFn.company" />
+                    <select ng-model="currentFn.companyId" ng-options="com.id as com.code for com in companies"></select>
+                    <!--<input tabindex="13" style="text-transform:uppercase;" type="text" ng-model="currentFn.company" />-->
                     <div class="clrBt"></div>
                 </div>
                 <div class="clrBt"></div>
