--- a/app/dispatches/dispatches.html
+++ b/app/dispatches/dispatches.html
@@ -36,9 +36,9 @@
 
       <div class="contLeftRightMain">
         <div class="clrBt"></div>
-        <div style="margin:0 0 10px 0;" class="buttonMain flt_R">
-          <button type="button" ng-click="showVanDataPopUp()" class="flt_L" style="margin-right:10px;">Add Van Details</button>
-        </div>
+        <!--<div style="margin:0 0 10px 0;" class="buttonMain flt_R">-->
+          <!--<button type="button" ng-click="showVanDataPopUp()" class="flt_L" style="margin-right:10px;">Add Van Details</button>-->
+        <!--</div>-->
         
         <div class="clrBt"></div>
         
